--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "@glidejs/glide": "^3.6.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2"
   }
