--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "codigo-codo-a-codo",
   "version": "1.0.0",
   "description": "",
-  "main": "/api/index.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon api/index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
